Bug 343896 - The text 'Some songs' is shown in the playlist area when it is empty
Summary: The text 'Some songs' is shown in the playlist area when it is empty
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlist (other bugs)
Version First Reported In: 2.8-git
Platform: Ubuntu Linux
: NOR minor
Target Milestone: 2.9
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-07 14:56 UTC by robert marshall
Modified: 2024-05-04 17:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description robert marshall 2015-02-07 14:56:03 UTC
./src/playlist/view/listview/PrettyListView.cpp:686
has the following
              emptyText = i18n( "Add some songs here by dragging them from all around." );

this should read
              emptyText = i18n( "Add some tracks here by dragging them from all around." );

Grepping the source for songs also reveals this

./src/browsers/playlistbrowser/DynamicCategory.cpp:117:    m_duplicateButton->setToolTip( i18n( "Allow duplicate songs in result" ) );
and a few instances in doc/index.docbook

Do you want me to submit a patch?If so just one patch for all these?


Reproducible: Always
Comment 1 Myriam Schweingruber 2015-02-07 16:12:54 UTC
Yes, please submit a patch, you can pack both in the same. It's just unfortunate that we are in string freeze right now as the Amarok 2.9 release is planned for tomorrow.
Comment 2 Justin Zobel 2022-10-14 05:46:53 UTC
Thank you for reporting this bug in KDE software. As it has been a while since this issue was reported and confirmed, can we please ask you to see if you can reproduce the issue with a recent software version?

If you can reproduce the issue, please change the status to "CONFIRMED" when replying. Thank you!
Comment 3 robert marshall 2022-10-21 13:26:59 UTC
Yes that text is still there
Comment 4 Bug Janitor Service 2024-05-04 07:47:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/amarok/-/merge_requests/93
Comment 5 Tuomas Nurmi 2024-05-04 17:25:59 UTC
Git commit 8c2055d85f4b124037d6ba890b70bd65aad26c09 by Tuomas Nurmi.
Committed on 04/05/2024 at 06:40.
Pushed by nurmi into branch 'master'.

Unify "songs" to read "tracks" in ui.

M  +4    -4    src/amarokconfig.kcfg
M  +1    -1    src/browsers/playlistbrowser/DynamicCategory.cpp
M  +1    -1    src/playlist/view/listview/PrettyListView.cpp
M  +1    -1    src/playlistgenerator/constraints/CheckpointEditWidget.ui

https://invent.kde.org/multimedia/amarok/-/commit/8c2055d85f4b124037d6ba890b70bd65aad26c09