Unify "songs" to read "tracks" in ui.

BUG: 343896